--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -145,7 +145,7 @@
           <div class="settings-item">
             <label for="model">Transcription Model</label>
             <select id="model" class="select-input">
-              <option value="whisper-1">Whisper (Default)</option>
+              <option value="scribe_v1">Whisper (Default)</option>
               <option value="whisper-large">Whisper Large</option>
               <option value="whisper-medium">Whisper Medium</option>
               <option value="whisper-small">Whisper Small</option>
@@ -168,7 +168,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="scripts/bridge.js"></script>
-  <script src="scripts/main.js"></script>
+  <script type="module" src="scripts/bridge.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
